[tool.poetry]
name = "elspot2mqtt"
version = "0.9.0"
description = "Elspot to MQTT Integration"
authors = ["Jakob Schlyter <jakob@kirei.se>"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
nordpool = ">=0.4.2"
pandas = ">=2.2.3"
pydantic = ">=2.7.1"
aiomqtt = "^2.3.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.9.9"
pytest = "^8.2.0"
pytest-ruff = ">=0.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
elspot2mqtt = "elspot2mqtt.cli:main"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501"]

[tool.ruff.lint.isort]
force-sort-within-sections = false
combine-as-imports = true
split-on-trailing-comma = false
