[project]
name = "elspot2mqtt"
version = "0.9.0"
description = "Elspot to MQTT Integration"
authors = [{name="Jakob Schlyter", email = "jakob@kirei.se"}]
requires-python = ">=3.13,<4.0"
dependencies = [
    "nordpool>=0.4.2",
    "pandas>=2.2.3",
    "pydantic>=2.7.1",
    "aiomqtt>=2.3.0",
]

[project.urls]
repository = "https://github.com/jschlyter/elspot2mqtt.git"

[project.scripts]
elspot2mqtt = "elspot2mqtt.cli:main"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ruff>=0.9.9",
    "pytest>=8.2.0",
    "pytest-ruff>=0.4.1"
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501"]

[tool.ruff.lint.isort]
force-sort-within-sections = false
combine-as-imports = true
split-on-trailing-comma = false
